# surchable

./: .env.example  README.md  compose.yml  generateMappings.py  go.mod  go.sum  pyproject.toml  runMappingGeneration.sh
.github/ISSUE_TEMPLATE/: task-tracker.md
coordinator/: Dockerfile  main.go
coordinator/endpoints/: blocklist.go  domainQueue.go  endpoints.go  jobs.go  pageLoads.go  pages.go  status.go
coordinator/endpoints/urls/: urls.go
coordinator/urls/: urls.go
crawler/: Dockerfile  __main__.py  config.py  coordinator.py  urls.py
docs/: coordinatorHTTP.md
frontend/: Dockerfile  main.go
internal/config/: config.go
internal/libdb/: blocklist.go  const.go  db.go  domainQueue.go  jobs.go  migration.go  pageInformation.go  pageLoads.go  searchIndex.go
internal/libdb/migrations/: 0to1.sql
internal/search/: tokens.go
internal/urls/: urls.go
internal/util/: jsonBody.go  ptr.go  richError.go  urls.go
mappings/: configuration  urls
scripts/: generateMappings.py
webui/: Dockerfile  main.go
