[tool.poetry]
name = "crawler"
version = "22.06"
description = ""
authors = ["AKP <tom@tdpain.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^21.5.0"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
